--- a/portfolio.html
+++ b/portfolio.html
@@ -40,10 +40,20 @@
         </nav>
         <ul class="contacts">
           <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contacts-link" href="mailto:info@devstudio.com">
+              <svg class="icon-mail" width="16" height="12">
+                <use href="./images/icons.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="contacts-item">
-            <a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="contacts-link" href="tel:+380961111111">
+              <svg class="icon-smartphone" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -188,27 +198,62 @@
     </main>
     <!-- Подвал сайта -->
     <footer class="page-footer">
-      <div class="container">
-        <a class="logo footer-logo" href="./index.html"><span>Web</span>Studio</a>
-        <address>
-          <ul class="footer-contacts">
-            <li class="item">
-              <a
-                class="map"
-                href="https://goo.gl/maps/FamfgwnyAjWvc73h8"
-                target="_blank"
-                rel="norefferer noopener"
-                >г. Киев, пр-т Леси Украинки, 26
+      <div class="container footer-container">
+        <div class="footer-left">
+          <a class="logo footer-logo" href="./index.html"><span>Web</span>Studio</a>
+          <address>
+            <ul class="footer-contacts">
+              <li class="item">
+                <a
+                  class="map"
+                  href="https://goo.gl/maps/FamfgwnyAjWvc73h8"
+                  target="_blank"
+                  rel="norefferer noopener"
+                  >г. Киев, пр-т Леси Украинки, 26
+                </a>
+              </li>
+              <li class="item">
+                <a class="footer-contacts-item" href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li class="item">
+                <a class="footer-contacts-item" href="tel:+380991111111">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <b class="text">присоединяйтесь</b>
+          <ul class="social-list">
+            <li class="social-list-item">
+              <a href="" class="social-link footer-social-link">
+                <svg class="social-icon footer-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
               </a>
             </li>
-            <li class="item">
-              <a class="footer-contacts-item" href="mailto:info@example.com">info@example.com</a>
+            <li class="social-list-item">
+              <a href="" class="social-link footer-social-link">
+                <svg class="social-icon footer-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="item">
-              <a class="footer-contacts-item" href="tel:+380991111111">+38 099 111 11 11</a>
+            <li class="social-list-item">
+              <a href="" class="social-link footer-social-link">
+                <svg class="social-icon footer-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-link footer-social-link">
+                <svg class="social-icon footer-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
